# celestial-bootstrap

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml  build.yml  release.yml
src/: celestial.rs  lib.rs  main.rs  utils.rs
src/celestial/: dialog.rs  downloader.rs  error.rs  hash.rs  java.rs  updater.rs
src/utils/: file.rs  hashing.rs
