[package]
name = "celestial-bootstrap"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
indicatif = "0.17.11"
dirs = "6.0.0"