[package]
name = "celestial-bootstrap"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "fs", "process"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
indicatif = "0.17.11"
futures-util = "0.3.31"
sha2 = "0.10.9"
native-dialog = "0.9.0"